--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -1,5 +1,48 @@
-.card {
-    width: 50%;
-    margin: 0 auto;
-    margin-top: 100px;
+:host {
+    height: 100vh;
+    display: block;
+    // background: linear-gradient(90deg, #1c3643, #273b47 25%, #1e5372);
+}
+
+form {
+    width: 90%;
+    margin: 0px auto;
+    position: relative;
+    top: 20px;
+    mat-form-field {
+        width: 96%;
+        margin: 2%;
+    }
+    mat-card-actions {
+        display: flex;
+        justify-content: center;
+        button {
+            background: #f00;
+            color: #fff;
+            width: 80%;
+            margin-bottom: 10px;
+        }
+    }
+}
+
+/* Medium only */
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+    form{
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 400px;
+    }
+}
+
+/* Large and up */
+@media screen and (min-width: 64em) {
+    form {
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 400px;
+    }
 }
