--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,7 +1,8 @@
 <form [formGroup]="form" (ngSubmit)="login($event)">
     <mat-card class="card">
         <mat-card-header>
-            <mat-card-title>Login</mat-card-title>
+            <mat-card-title>Angular Store</mat-card-title>
+            <mat-card-subtitle>Login</mat-card-subtitle>
             <mat-icon>account_circle</mat-icon>
         </mat-card-header>
         <mat-card-content>
