--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,19 +1,21 @@
 <form [formGroup]="form" (ngSubmit)="register($event)">
     <mat-card class="card">
         <mat-card-header>
-            <mat-card-title>Registro</mat-card-title>
+            <mat-card-title>Register</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div class="row">
-                <div class="col-xs">
-                <mat-form-field>
+                <div class="col">
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
                     <input placeholder="email" formControlName="email" matInput type="email">
                 </mat-form-field>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs">
-                <mat-form-field>
+                <div class="col">
+                <mat-form-field appearance="outline">
+                    <mat-label>Password</mat-label>
                     <input placeholder="password" formControlName="password" matInput type="password">
                 </mat-form-field>
                 </div>
