Change the name field

--- a/src/app/order/components/order/order.component.html
+++ b/src/app/order/components/order/order.component.html
@@ -54,7 +54,7 @@
     </mat-step>
     <mat-step>
         <ng-template matStepLabel>Your Data</ng-template>
-        <h1>Form</h1>
+        <h1>Customer Data</h1>
         <div>
             <button mat-raised-button matStepperPrevious class="buttonA">Back</button>
             <button mat-raised-button matStepperNext class="buttonB">Next</button>
